<resources>
    <string name="app_name">Android App Example</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IG3 - Mobile Development</string>
    <string name="nav_header_subtitle" translatable="false">Anne SMAL &amp; Lisa TRAPLETTI</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="menu_module_1">1. Activity &amp; Fragments</string>
    <string name="menu_module_2">2. Resources</string>
    <string name="menu_module_3">3. Architecture</string>
    <string name="menu_module_4">4. Persistence</string>
    <string name="menu_module_5">5. Async &amp; API</string>
    <string name="menu_module_6">6. Kotlin</string>
    <string name="module_title_start">Start</string>
    <string name="title_activity_welcome">AppExample</string>
    <string name="welcome_title">Welcome !</string>
    <string name="welcome_description">Through this application, you will learn how to develop an Android mobile app.
        Use it as an example : Go to the source code, test it with some rotation, plane mode, …
        So that you will discover how to create your own super project. \n
        OK, time to dive into the amazing Android World !
    </string>
    <string name="module_1_title">Activities &amp; Fragments</string>
    <string name="module_1_description">Activities and fragments are the basis of a mobile application,
        as they are representing your entire User Interface. \n
        In this chapter, you will learn what is an activity, a fragment, and how Android OS is working
        with them.
    </string>
    <string name="module_1_activity_lifecycle_title">Activity lifecycle</string>
    <string name="module_1_what_is_an_activity_title">What is an Activity ?</string>
    <string name="module_1_what_is_an_activity_description">An <b>activity</b> provides the window
        in which the app draws its UI. Generally, one activity implements one screen of the app. \n \n

        <b><u>How to create an activity ?</u></b> \n
        For this, we need : \n
        - A Java (or Kotlin) class extending Activity; \n
        - A layout; \n
        - To declare it in the app\'s manifest (AndroidManifest.xml); \n \n

        The <b>Java class</b> represents the <b>layout</b> part of an activity. \n
        The <b><u>How to navigate through activities ?</u></b> represents its view part, written in XML. You will have more details about
        layouts in the next chapter. \n \n \n

        <b>intent</b> \n
        By using an <b>Explicit intent</b>. An Intent describes an action to perform. You can either : \n
        - Start an Activity (within your own app, or another app); \n
        - Start a Service (background / foreground worker); \n
        - Deliver a broadcast (delivered to all the apps); \n \n

        There are two types of them : \n
        - <b>Implicit intent</b> : The target app is specified; \n
        - <i>business</i> : A general action is specified (Take a picture, …) \n \n

        Go to the <i>WelcomeActivity</i> to discover how to create an explicit intent. \n
        For the implicit intent, click on the next button and go to the code to check the differences between
        the two intents.
    </string>
    <string name="module_1_how_to_use_activities">When you send an Intent, if Android sees more
        than one app that can handle it, it will show a Chooser. Android knows which app can handle
        which actions by checking their Manifest. \n
        That\'s why in our example, we had to write in the manifest that we are using the camera. \n
        Go to the manifest to check.
    </string>
    <string name="module_1_go_to_camera">Use camera</string>
    <string name="module_1_every_activity_has_its_lifecycle">An activity has its own lifecycle : </string>
    <string name="module_1_go_to_lifecycle_testing_activity"> <b>NEVER</b> call these methods yourself :
        This lifecycle is managed only by Android. \n \n
        Understanding the lifecycle of an activity, and what you can / should do at each step is very
        important part of the mobile development. \n
        Go to the <b>LifecycleTestingActivity</b> and discover how this lifecycle is working and how
        Android is managing it.</string>
    <string name="module_1_test_lifecycle">Test lifecycle</string>
    <string name="title_activity_lifecycle_testing">LifecycleTestingActivity</string>
    <string name="module_1_lifecycle_testing_description">
        Mastering the lifecycle of an activity will considerably help you to avoid a lot of bugs.
        So take your time to analyze the logs, the code, play with the emulator, …
        And ask you the following questions : What would happen if \n

        - I\'m initializing my counter in onStart() instead of onCreate() ? \n
        - I\'m leaving the application ? \n
        - I\'m rotating the phone ? \n
        - Android is killing my app to free some resources for other apps ? (Yes, … it does) \n
    </string>
    <string name="my_counter">My counter : %1$d</string>
    <string name="module_1_what_is_a_fragment_title">What is a fragment ?</string>
    <string name="module_1_what_is_a_fragment_description"> As you saw, we didn\'t create an activity
        for each screen of our app. It is because we decided to use <b>fragments</b>, combined to
        our activities. \n \n
        A <b>fragment</b> is a piece of user interface, used in an activity.
        Fragments have been introduced by Android for app development on bigger devices (such as tablets) :
        As a fragment is only a "piece" of UI, you can combine multiple fragments in a single activity
        to build a multi-pane UI and reuse a fragment in different activities. \n
    </string>
    <string name="module_1_fragment_lifecycle">Fragments also have their own lifecycle, which is very
        similar to activity lifecycle, but has some particularities. Go to the <b>LifecycleTestingFragment</b>
        to check the differences with the activity lifecycle.</string>
    <string name="module_1_fragments_on_smartphone">On smartphone</string>
    <string name="module_1_fragments_on_tablet">On tablet</string>
    <string name="module_1_multipane_fragment">You can think of a fragment as a modular section of an activity,
        which has its own lifecycle, receives its own input events, and which you can add or remove
        while the activity is running. \n \n
        Check <b>WhatIsAFragmentFragment</b> class and try to understand how an
        activity can integrate a fragment in its UI.
    </string>
    <string name="module_1_my_first_ui">My first UI</string>
    <string name="module_1_first_ui_name">Name</string>
    <string name="module_1_first_ui_age">Age</string>
    <string name="module_1_first_ui_mail">Mail</string>
    <string name="module_1_first_ui_password">Password</string>
    <string name="module_1_first_toast">Toast</string>
    <string name="module_1_toast_hello_message">Hello %1$s, this is a toast !</string>
    <string name="module_1_passing_arguments_description">It is possible to pass some
    information from a fragment to another, using <b>bundles</b>. Go to the <b>FirstUiFragment</b>
    and <b>SecondUiFragment</b> classes to check this mechanism.</string>
    <string name="module_1_mandatory_field">Mandatory field</string>
    <string name="module_2_resources_organisation_by_android_studio">Additional files and <b>static
        content</b> that your code uses, such as bitmaps, layout definitions, ui strings, … \n
        You should always externalize app resources such as images and strings from your code,
        so that you can maintain them independently (In any case, Android Studio will warn you to do it). \n \n

        <b><u>Resources for specific cases</u></b> \n
        If you need alternative resources for specific <b>device configurations</b>, you can provide those
        by grouping them in specially-named resource directories, using <b>qualifiers</b>. At runtime,
        Android will use the appropriate resource based on the current phone configuration.
        (Try to rotate to check) \n \n

        Under the folder <b>res</b>, you can find the following hierarchy, that you need to respect :
    </string>
    <string name="module_2_resource_type_drawable" translatable="false">Drawable</string>
    <string name="module_2_resource_type_layout" translatable="false">Layout</string>
    <string name="module_2_resource_type_menu" translatable="false">Menu</string>
    <string name="module_2_resource_type_mipmap" translatable="false">Mipmap</string>
    <string name="module_2_resource_type_navigation" translatable="false">Navigation</string>
    <string name="module_2_resource_type_values" translatable="false">Values</string>
    <string name="module_2_layout_structure_title">Layout Structure</string>
    <string name="next">Next</string>
    <string name="module_4_two_solutions">There are several ways to store data locally in order to
        make this data accessible to all application activities.\n\n
        The two mains are :
    </string>
    <string name="module_4_shared_preferences">Shared Preferences</string>
    <string name="module_4_shared_preferences_resume">
        - For unstructured data\n- Small amounts
    </string>
    <string name="module_4_sqlite">SQLite</string>
    <string name="module_4_sqlite_resume">
        - Large structured data
    </string>
    <string name="module_4_sqlite_description">
        The good news is that to use SQLite in Android, you don\'t need to know SQL.
        You will be using an ORM that will handle the work for you: <b>Room</b>.
    </string>
    <string name="module_4_room_description"> Room has 3 major components:
        <b>Database</b>, which holds all the data,
        <b>Entities</b>, your models, and
        <b>DAOs</b>, helpers to query various tables.\n
        The need to use pure SQL statements is diminished, almost unexisting.
    </string>
    <string name="module_4_room_architecture"> As a good practice, you should expose your data as
        Repositories, 1 Repository for 1 type of Entity, and the ViewModel calls the Repository.
        The ViewModel doesn\'t know how the data is stored, it only knows it’s in the Repository,
        but behind that, the data could be on the network, in a database, in a raw file …
    </string>
    <string name="module_4_lets_test_room"> Now, clic "next" to test Room…</string>
    <string name="module_4_go_to_view_model"> Go to view model</string>
    <string name="module_4_room_before_test">
        Oh wait ! Before testing Room, let me quickly introduce you to the RecyclerView !
    </string>
    <string name="module_4_recycler_view_description">
        A RecyclerView is a component used to show lists <b>scrollable</b> and <b>Memory-efficient</b>.
        As its name tells it : views are recycled.
    </string>
    <string name="module_4_recycler_view_elements_needed">
        Several elements are needed : \n
        - A <b>container</b> (in the XML Layout)\n
        - An <b>XML item layout</b>, to describe how a single element should look\n
        - A <b>Layout Manager</b>, to describe how all elements should stack\n
        - An <b>Adapter</b>, that manage elements.
    </string>
    <string name="module_4_recycler_view_exemple">
        On the next page, you will see an example of RecyclerView which displays all the users of
        our database. <b>Try to find in the AppExemple code</b> all the elements needed which are presented
        above and the elements needed for Room (Entity, Repository, ViewModel…).\n
        PS : As the database is stored locally, nothing will appear until you add users.
    </string>
</resources>