<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/mod1PresentationFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_module_1" />
        <item
            android:id="@id/mod2PresentationFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_module_2" />
        <item
            android:id="@+id/mod3PresentationFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_module_3" />
        <item
            android:id="@+id/mod5PresentationFragment"
            android:icon="@drawable/ic_web_api"
            android:title="@string/menu_module_5" />
    </group>
</menu>
