<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mod1_presentation">

    <fragment
        android:id="@+id/nav_mod1_presentation"
        android:name="be.henallux.ig3.android.app.example.ui.module1.ActivitiesPresentationFragment"
        android:label="@string/menu_module_1"
        tools:layout="@layout/fragment_module_presentation">

        <action
            android:id="@+id/action_PresentationFragment_to_ActivityLifecycleFragment"
            app:destination="@id/nav_mod1_what_is_activity" />
    </fragment>
    <fragment
        android:id="@+id/nav_mod1_activities_lifecycle"
        android:name="be.henallux.ig3.android.app.example.ui.module1.ActivityLifecycleFragment"
        android:label="@string/module_1_activity_lifecycle_title"
        tools:layout="@layout/fragment_activity_lifecycle"/>

    <fragment
        android:id="@+id/nav_module_2_presentation"
        android:name="be.henallux.ig3.android.app.example.ui.module2.LayoutsPresentationFragment"
        android:label="@string/menu_module_2"
        tools:layout="@layout/fragment_module_presentation">
        <action
            android:id="@+id/action_PresentationFragment_to_layoutStructureFragment"
            app:destination="@id/nav_layout_structure" />
    </fragment>
    <fragment
        android:id="@+id/nav_layout_structure"
        android:name="be.henallux.ig3.android.app.example.ui.module2.LayoutStructureFragment"
        android:label="@string/module_2_layout_structure_title"
        tools:layout="@layout/fragment_layout_structure" />

    <fragment
        android:id="@+id/nav_module_3_presentation"
        android:name="be.henallux.ig3.android.app.example.ui.module3.ResourcesPresentationFragment"
        android:label="@string/menu_module_3"
        tools:layout="@layout/fragment_module_presentation" >
        <action
            android:id="@+id/action_PresentationFragment_to_ResourcesTypesFragment"
            app:destination="@id/nav_resources_types" />
    </fragment>
    <fragment
        android:id="@+id/nav_resources_types"
        android:name="be.henallux.ig3.android.app.example.ui.module3.ResourcesTypesFragment"
        android:label="@string/module_3_resources_types_title"
        tools:layout="@layout/fragment_resources_types" />
    <fragment
        android:id="@+id/nav_mod1_what_is_activity"
        android:name="be.henallux.ig3.android.app.example.ui.module1.WhatIsAnActivityFragment"
        android:label="@string/module_1_what_is_an_activity_title"
        tools:layout="@layout/fragment_what_is_an_activity">
        <action
            android:id="@+id/action_whatIsAnActivityFragment_to_ActivityLifecycleFragment"
            app:destination="@id/nav_mod1_activities_lifecycle" />
    </fragment>
</navigation>