<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/container_scroll_bottom_padding">

        <LinearLayout
            android:id="@+id/RoomLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/orm_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/container_next_section_vertical_margin"
                android:text="@string/module_4_sqlite_description" />

            <ImageView
                android:id="@+id/orm_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/module_4_room" />

            <TextView
                android:id="@+id/room_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/container_next_section_vertical_margin"
                android:text="@string/module_4_room_description" />

            <TextView
                android:id="@+id/room_architecture_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/module_4_room_architecture" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/module_4_room_archi" />

            <Button
                android:id="@+id/go_to_view_model_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/container_next_section_vertical_margin"
                android:background="@color/colorAccent"
                android:text="@string/module_4_go_to_view_model"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/test_room_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/module_4_lets_test_room" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/room_next_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

