<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.module1.ActivitiesPresentationFragment">

    <TextView
        android:id="@+id/module_presentation_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/module_1_title"
        android:textColor="@color/textBody"
        android:textSize="@dimen/text_size_headline_5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/module_presentation_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/module_1_description"
        android:textAlignment="center"
        android:textColor="@color/textBody"
        android:textSize="@dimen/text_size_body_1" />

    <Button
        android:id="@+id/module_presentation_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/module_title_start"
        android:textColor="@android:color/white" />
</LinearLayout>