<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/container_scroll_bottom_padding">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recycler_view_wait_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/container_next_section_vertical_margin"
                android:layout_marginBottom="@dimen/container_next_section_vertical_margin"
                android:text="@string/module_4_room_before_test" />

            <TextView
                android:id="@+id/recycler_view_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/module_4_recycler_view_description" />

            <ImageView
                android:id="@+id/recycler_view_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/container_next_section_vertical_margin"
                android:src="@drawable/module_4_recyclerview" />

            <TextView
                android:id="@+id/recycler_view_elements_needed_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/container_next_section_vertical_margin"
                android:text="@string/module_4_recycler_view_elements_needed" />

            <TextView
                android:id="@+id/recycler_view_exemple_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/module_4_recycler_view_exemple" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/recycler_view_next_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

